--- a/views/blog/artikel_list.html
+++ b/views/blog/artikel_list.html
@@ -3,20 +3,18 @@
 <ul style="list-style: none;">
     {%for i in object_list%}
     <li>
-        {% if page_obj.is_paginated %}
         <a href="{% url 'blog:detail' i.slug%}">
             {{forloop.counter0|add:page_obj.start_index}}. {{i}}
-        </a> {% else %}
-        <a href="{% url 'blog:detail' i.slug%}">
-            {{forloop.counter}}. {{i}}
-        </a> {% endif %}
+        </a>
     </li>
     {% endfor %}
 </ul>
-{% if page_obj.has_other_pages %} {% if page_obj.has_previous %}
-<a href="{% url 'blog:index' %}?page={{page_obj.previous_page_number}}">&laquo;</a> {% else %} &laquo; {% endif %} {% for i in paginator.page_range %} {% if i != page_obj.number %}
-<a href="{% url 'blog:index' %}?page={{i}}">{{i}}</a> {% else %} {{i}} {% endif %} {% endfor %} {% if page_obj.has_next %}
-<a href="{% url 'blog:index' %}?page={{page_obj.next_page_number}}">&raquo;</a> {% else %} &raquo; {% endif %} {% endif %}
+{% if page_obj.has_other_pages %} {% if page_obj.has_previous %} {% if request.GET.keyword %}
+<a href="{% url 'blog:index' %}?page={{page_obj.previous_page_number}}&keyword={{request.GET.keyword}}">&laquo;</a> {% else %}
+<a href="{% url 'blog:index' %}?page={{page_obj.previous_page_number}}">&laquo;</a> {% endif %} {% else %} &laquo; {% endif %} {% for i in paginator.page_range %} {% if i != page_obj.number %}
+<a href="{% url 'blog:index' %}?page={{i}}">{{i}}</a> {% else %} {{i}} {% endif %} {% endfor %} {% if page_obj.has_next %} {% if request.GET.keyword %}
+<a href="{% url 'blog:index' %}?page={{page_obj.next_page_number}}&keyword={{request.GET.keyword}}">&raquo;</a> {% else %}
+<a href="{% url 'blog:index' %}?page={{page_obj.next_page_number}}">&raquo;</a> {% endif %} {% else %} &raquo; {% endif %} {% endif %}
 <br><br>
 <a href="{% url 'blog:create' %}">
     <button>Tambah Data</button>
